--- a/rico.html
+++ b/rico.html
@@ -10,7 +10,7 @@
 	<div class="kolumna2">
 		<div id="zdjecie2" class="kolor0">
 			<h1>Rico:</h1>
-			<center><img src="Rico.png" width="100%"></center>
+			<center><img src="rico.png" width="100%"></center>
 		</div>
 	</div>
 	<div class="kolumna2">
